# weather-station

./: .env.example  .gitignore  README.md  docker-compose.yml  openapi.yml
.github/: dependabot.yml
cli/: .gitignore  Dockerfile  README.md  pyproject.toml
cli/hw_cli/: __main__.py
cli/hw_cli/commands/: cache.py  config_cmd.py  devices.py  simulate.py
cli/hw_cli/core/: config.py  constants.py  data_generator.py  device_manager.py  models.py  storage.py  token_cache.py
cli/hw_cli/core/api/: auth.py  client.py  device_authenticator.py  token_manager.py  weather_api_gateway.py
cli/hw_cli/utils/: console.py
cli/tests/: conftest.py  test_cache.py  test_devices.py  test_main.py  test_simulate.py
cli/ws_cli/: __main__.py  config.py  models.py
cli/ws_cli/commands/: cache.py  config.py  config_cmd.py  devices.py  enrollment.py  simulate.py
cli/ws_cli/core/: azure_telemetry.py  config.py  device_manager.py  interfaces.py  sim_data_gen.py  telemetry.py
cli/ws_cli/core/identity/: azure_dps_provisioner.py  provisioning_cache.py
cli/ws_cli/core/publisher/: azure_publisher.py  data_publisher.py  fake_data_publisher.py
cli/ws_cli/core/simulation/: data_generator.py  sim_data_gen.py
cli/ws_cli/utils/: telemetry_format.py
deploy/: README.md  apim.tf  functions.tf  identity.tf  locals.tf  main.tf  observability.tf  outputs.tf  security.tf  storage.tf  values.tfvars  variables.tf  web.tf
docs/: astro.config.mjs  infrastructure.excalidraw  markdoc.config.mjs  openapi.yml  package-lock.json  package.json
firmware/: platformio.ini  weather.proto
local/: .env.example  .gitignore  docker-compose.yml
provisioning-service/: Dockerfile  Makefile  (+5 more)
(+544 files in other folders)
